<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.tudelft.ewi.ds.bankchain.activities.RecentTransactionsActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="114dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/recentTransactionActivityButton"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:onClick="startRecentTransactionActivity"
            android:text="View recent transactions"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="68dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/newVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_new_verification"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="4dp"
            android:layout_marginBottom="25dp"
            android:layout_above="@+id/respondToChallenge"
            android:layout_alignStart="@+id/respondToChallenge" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/synchronize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_popup_sync"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="4dp"
            android:layout_above="@+id/newVerification"
            android:layout_toEndOf="@+id/editText"
            android:layout_marginBottom="25dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/respondToChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/verifyResponse"
            android:layout_alignStart="@+id/verifyResponse"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_new_verification"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="4dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/verifyResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_new_verification"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="4dp" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:text="@string/create_challenge"
            android:layout_alignTop="@+id/newVerification"
            android:layout_toStartOf="@+id/newVerification"
            android:layout_marginEnd="22dp"
            android:editable="false"
            android:focusable="false"
            android:clickable="false"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:text="@string/verify_response"
            android:layout_alignTop="@+id/verifyResponse"
            android:layout_alignStart="@+id/editText"
            android:editable="false"
            android:focusable="false"
            android:clickable="false"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:text="@string/verify_challenge"
            android:layout_alignTop="@+id/respondToChallenge"
            android:layout_alignStart="@+id/editText2"
            android:editable="false"
            android:focusable="false"
            android:clickable="false"/>

    </RelativeLayout>


</RelativeLayout>
