<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Demo"
        android:onClick="fillForDemo"/>

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/iban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/iban"
        android:inputType="text" />

    <EditText
        android:id="@+id/response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/recieved_response"
        android:inputType="text" />

    <Button
        android:id="@+id/manualResponseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"/>

</LinearLayout>