<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Demo"
        android:onClick="fillForDemo"/>
    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/ibanInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/iban"
        android:inputType="text" />

    <EditText
        android:id="@+id/challengeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/verify_challenge"
        android:inputType="text" />

    <Button
        android:id="@+id/manualVerificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:text="@string/respond" />

</LinearLayout>

